# exify

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  exify-672ed2669632819b.js  exify-672ed2669632819b_bg.wasm  exify-78da2ec99161c7d.js  exify-78da2ec99161c7d_bg.wasm  exify-b33c93d7d7b9bd1c.js  exify-b33c93d7d7b9bd1c_bg.wasm  exify-b646c33d1384b851.js  exify-b646c33d1384b851_bg.wasm  exify-d37eaef931a849c2.js  exify-d37eaef931a849c2_bg.wasm  flake.nix  index-26870920d9a6a9dd.css  index-736bd890d0a70b35.css  index-748174cf58cdac19.css  index-de0b8dbd1bd3f53f.css  index-f0b360a8fb9ad536.css  index.css  index.html  tailwind.config.js
.github/workflows/: publish.yml
assets/: .webmanifest
src/: app_ctx.rs  components.rs  debug.rs  details.rs  download.rs  icons.rs  layout.rs  main.rs  skeleton.rs  types.rs  upload.rs  utils.rs
src/components/: add.rs  details.rs  download.rs  layout.rs  skeleton.rs
src/icons/: back.rs  broken_image.rs  close.rs  icon_image.rs  icon_plus.rs  image.rs  logo.rs  mod.rs  plus.rs  spinner.rs
