[package]
name = "exify"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.4"
gloo = "0.10"
img-parts= "0.3.0"
image = "0.24.7"
js-sys = "0.3"
kamadak-exif= "0.5.5"
thiserror = "1.0"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "^0.3.64"
features = [
  "Blob",
  "BlobPropertyBag",
  "File",
  "DragEvent",
  "DataTransfer",
  "Url"
]
