[package]
name = "exify"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
gloo = "0.11"
img-parts = "0.3.0"
js-sys = "0.3.70"
kamadak-exif = "0.5.5"
thiserror = "1.0.63"
wasm-bindgen = "= 0.2.93"
yew = { version = "0.21", features = ["csr"] }

[dependencies.web-sys]
version = "^0.3.70"
features = [
  "Blob",
  "BlobPropertyBag",
  "DragEvent",
  "DataTransfer",
  "File",
  "HtmlAnchorElement",
  "Url"
]

# Yew -> Optimizations
# https://yew.rs/docs/advanced-topics/optimizations#cargotoml
[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
